Creacion de jsp de listarTodos y buscarPorNombre

--- a/WebContent/html/AltaClienteView.html
+++ b/WebContent/html/AltaClienteView.html
@@ -6,11 +6,11 @@
 <link rel="stylesheet" type="text/css" href="css/estilos_formulario.css">
 </head>
 <body>
-<h1>Alta de Colegio</h1>
+<h1>Alta de Tienda</h1>
     <section id="contenedor">
         <section id="formulario">
-            <form name="colegio" method="post" action="AltaColegio" enctype="text/html">
-                <h2>Datos del colegio</h2>
+            <form name="colegio" method="post" action="Tienda/altaCliente" enctype="text/html">
+                <h2>Datos de la tienda</h2>
                 
                 <div class="texto">
                     <label for="nombre" class="mano">Nombre</label>
@@ -19,16 +19,16 @@
                     <input type="text" id="nombre" name="nombre" required/>
                 </div>
                 <div class="texto">
-                    <label for="direccion" class="mano">Direccion</label>
+                    <label for="apellidos" class="mano">Apellidos</label>
                 </div>
                 <div class="elemento">
-                    <input type="text" id="direccion" name="direccion" required/>
+                    <input type="text" id="apellidos" name="apellidos" required/>
                 </div>
                 <div class="texto">
-                    <label for="numaulas" class="mano">Numero de aulas</label>
+                    <label for="dni" class="mano">DNI</label>
                 </div>
                 <div class="elemento">
-                    <input type="number" id="numaulas" name="numaulas" size=4 required/>
+                    <input type="number" id="dni" name="dni" size=9 required/>
                 </div>
                 <div class="texto">
                     <label for="numalumnos" class="mano">Numero de alumnos</label>
