--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,8 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Inicio</title>
+<link rel="stylesheet" type="text/css" href="css/estilos_formulario.css">
 </head>
 <body>
-
+    <a href="html/AltaClienteView.html">Alta de cliente</a>
+    <br/>
+    <a href="/Ej15_Github/Tienda/listarTodos.jsp">Listar todos</a>
+    <br/>
+    <a href="jsp/buscarPorNombre.jsp">Buscar por nombre</a>
 </body>
 </html>
