Caso de uso listar todos

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
 <body>
     <a href="html/AltaClienteView.html">Alta de cliente</a>
     <br/>
-    <a href="/Ej15_Github/Tienda/listarTodos.jsp">Listar todos</a>
+    <a href="/Ej15_Github/Tienda/listarTodos">Listar todos</a>
     <br/>
     <a href="jsp/buscarPorNombre.jsp">Buscar por nombre</a>
 </body>
