Creacion de buscar por nombre y comienzo de buscar por id y borrar esa fila de id

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,10 +6,12 @@
 <link rel="stylesheet" type="text/css" href="css/estilos_formulario.css">
 </head>
 <body>
-    <a href="html/AltaClienteView.html">Alta de cliente</a>
+    <a href="/Ej15_Github/Tienda/altaCliente">Alta de cliente</a>
     <br/>
     <a href="/Ej15_Github/Tienda/listarTodos">Listar todos</a>
     <br/>
-    <a href="jsp/buscarPorNombre.jsp">Buscar por nombre</a>
+    <a href="/Ej15_Github/Tienda/buscarPorNombre">Buscar por nombre</a>
+    <br/>
+    <a href="/Ej15_Github/Tienda/buscarPorId">Buscar por id</a>
 </body>
 </html>
