Update de id y listar todos con delete

--- a/WebContent/html/AltaClienteView.html
+++ b/WebContent/html/AltaClienteView.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Formulario para alta de colegio</title>
+<title>Formulario para alta de cliente</title>
 <link rel="stylesheet" type="text/css" href="../css/estilos_formulario.css">
 </head>
 <body>
-<h1>Alta de Tienda</h1>
+<h1>Alta de cliente</h1>
     <section id="contenedor">
         <section id="formulario">
             <form name="colegio" method="post" action="/Ej15_Github/Tienda/altaCliente" enctype="text/html">
