--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,12 +6,18 @@
 <link rel="stylesheet" type="text/css" href="css/estilos_formulario.css">
 </head>
 <body>
+<!-- Por defecto, con cada una de estas opciones va al Servlet Tienda
+     y dentro de él al doGet. Dentro de este, va al option que viene
+     despues de Tienda, o sea, altaCliente, listarTodos, buscarPorNombre
+     o buscarPorId -->
     <a href="/Ej15_Github/Tienda/altaCliente">Alta de cliente</a>
     <br/>
     <a href="/Ej15_Github/Tienda/listarTodos">Listar todos</a>
     <br/>
     <a href="/Ej15_Github/Tienda/buscarPorNombre">Buscar por nombre</a>
     <br/>
-    <a href="/Ej15_Github/Tienda/buscarPorId">Buscar por id</a>
+    <a href="/Ej15_Github/Tienda/actualizarPorId">Actualizar cliente</a>
+    <br/>
+    <a href="/Ej15_Github/Tienda/buscarPorId">Borrar cliente</a>
 </body>
 </html>
